--- a/index.html
+++ b/index.html
@@ -1,6 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <title>Kaveri Microtek</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/language.js" defer></script>
+</head>
+<body>
+
+<header>
+  <h1 id="title">Kaveri Microtek</h1>
+  <p id="tagline">Advancing Agriculture Through Science</p>
+
+  <div class="lang-buttons">
+    <button onclick="setLanguage('en')">English</button>
+    <button onclick="setLanguage('te')">తెలుగు</button>
+    <button onclick="setLanguage('hi')">हिंदी</button>
+  </div>
+</header>
+
+<section>
+  <h2 id="about-title">About Us</h2>
+  <p id="about-text">
+    Kaveri Microtek is a seed technology company developing high quality hybrid seeds for Maize, Paddy and Cotton.
+  </p>
+</section>
+
+<section>
+  <h2 id="crop-title">Our Crops</h2>
+  <ul>
+    <li><a href="maize.html">🌽 Maize</a></li>
+    <li><a href="paddy.html">🌾 Paddy</a></li>
+    <li><a href="cotton.html">🌿 Cotton</a></li>
+  </ul>
+</section>
+
+<footer>
+  <p id="footer-text">© 2026 Kaveri Microtek. All Rights Reserved.</p>
+</footer>
+
+</body>
+</html>
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  background: #f4fff4;
+  color: #003300;
+}
+
+header {
+  background: #2e7d32;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 28px;
+}
+
+section {
+  padding: 20px;
+  margin: 10px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  font-size: 22px;
+  margin: 10px 0;
+}
+
+a {
+  text-decoration: none;
+  color: #1b5e20;
+  font-weight: bold;
+}
+
+.lang-buttons button {
+  margin: 5px;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+footer {
+  background: #1b5e20;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+const content = {
+  en: {
+    title: "Kaveri Microtek",
+    tagline: "Advancing Agriculture Through Science",
+    aboutTitle: "About Us",
+    aboutText: "Kaveri Microtek is a seed technology company developing high quality hybrid seeds for Maize, Paddy and Cotton.",
+    cropTitle: "Our Crops",
+    footer: "© 2026 Kaveri Microtek. All Rights Reserved."
+  },
+  te: {
+    title: "కవేరి మైక్రోటెక్",
+    tagline: "విజ్ఞానంతో వ్యవసాయ అభివృద్ధి",
+    aboutTitle: "మా గురించి",
+    aboutText: "కవేరి మైక్రోటెక్ మక్కజొన్న, వరి మరియు పత్తి పంటల కోసం హైబ్రిడ్ విత్తనాలను అభివృద్ధి చేస్తుంది.",
+    cropTitle: "మా పంటలు",
+    footer: "© 2026 కవేరి మైక్రోటెక్. అన్ని హక్కులు కలవు."
+  },
+  hi: {
+    title: "कावेरी माइक्रोटेक",
+    tagline: "विज्ञान के माध्यम से कृषि में प्रगति",
+    aboutTitle: "हमारे बारे में",
+    aboutText: "कावेरी माइक्रोटेक मक्का, धान और कपास के लिए हाइब्रिड बीज विकसित करती है।",
+    cropTitle: "हमारी फसलें",
+    footer: "© 2026 कावेरी माइक्रोटेक. सर्वाधिकार सुरक्षित."
+  }
+};
+
+function setLanguage(lang) {
+  document.getElementById("title").innerText = content[lang].title;
+  document.getElementById("tagline").innerText = content[lang].tagline;
+  document.getElementById("about-title").innerText = content[lang].aboutTitle;
+  document.getElementById("about-text").innerText = content[lang].aboutText;
+  document.getElementById("crop-title").innerText = content[lang].cropTitle;
+  document.getElementById("footer-text").innerText = content[lang].footer;
+}
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Maize - Kaveri Microtek</title>
+<link rel="stylesheet" href="css/style.css">
+<script src="js/language.js" defer></script>
+</head>
+<body>
+
+<header>
+<h1 id="maize-title">Maize Seeds</h1>
+<div class="lang-buttons">
+<button onclick="setMaize('en')">English</button>
+<button onclick="setMaize('te')">తెలుగు</button>
+<button onclick="setMaize('hi')">हिंदी</button>
+</div>
+</header>
+
+<section>
+<p id="maize-text">
+High yield hybrid maize seeds with strong stalk, uniform cobs and excellent adaptability.
+</p>
+</section>
+
+<footer>
+<a href="index.html">⬅ Home</a>
+</footer>
+
+<script>
+function setMaize(lang){
+const data={
+en:{title:"Maize Seeds",text:"High yield hybrid maize seeds with strong stalk, uniform cobs and excellent adaptability."},
+te:{title:"మక్క విత్తనాలు",text:"బలమైన కాండం, సమానమైన కాబ్స్ మరియు అధిక దిగుబడి కలిగిన హైబ్రిడ్ మక్క విత్తనాలు."},
+hi:{title:"मक्का बीज",text:"मजबूत तना, समान भुट्टे और उच्च उत्पादन वाले हाइब्रिड मक्का बीज।"}
+};
+document.getElementById("maize-title").innerText=data[lang].title;
+document.getElementById("maize-text").innerText=data[lang].text;
+}
+</script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Paddy - Kaveri Microtek</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+<h1>Paddy Seeds</h1>
+</header>
+
+<section>
+<p>
+High yielding paddy hybrids with excellent grain quality and strong lodging resistance.
+</p>
+</section>
+
+<footer>
+<a href="index.html">⬅ Home</a>
+</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Cotton - Kaveri Microtek</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+<h1>Cotton Seeds</h1>
+</header>
+
+<section>
+<p>
+High lint yield cotton hybrids with good pest tolerance and strong fiber quality.
+</p>
+</section>
+
+<footer>
+<a href="index.html">⬅ Home</a>
+</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>About Us</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+<h1>About Kaveri Microtek</h1>
+</header>
+
+<section>
+<p>
+Kaveri Microtek is a seed technology division focused on developing high quality hybrid seeds using advanced research and field testing.
+</p>
+</section>
+
+<footer>
+<a href="index.html">⬅ Home</a>
+</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Contact</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+<h1>Contact Us</h1>
+</header>
+
+<section>
+<p>📍 Address: Hyderabad, India</p>
+<p>📞 Phone: +91-XXXXXXXXXX</p>
+<p>📧 Email: info@kaverimicrotek.com</p>
+</section>
+
+<footer>
+<a href="index.html">⬅ Home</a>
+</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <meta charset="UTF-8">
 <title>Kaveri Microtek</title>
 
