--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <script src="js/language.js" defer></script>
 </head>
 <body>
+  <section id="legacy">
+  <h2>Kaveri Legacy</h2>
+  <p>
+    Kaveri has built a strong legacy in Indian agriculture through decades of
+    dedication to seed research, innovation, and farmer trust.
+  </p>
+
+  <p>
+    Rooted in scientific excellence and driven by a farmer-first approach,
+    Kaveri continues to empower farmers with reliable seed solutions.
+  </p>
+</section>
 
 <header>
   <h1 id="title">Kaveri Microtek</h1>
